@@ -10,3 +10,4 @@ Disassembly of section .text:
 .*:	b9 92 f0 69 [	 ]*trot	%r6,%r9,15
 .*:	b9 91 f0 69 [	 ]*trto	%r6,%r9,15
 .*:	b9 90 f0 69 [	 ]*trtt	%r6,%r9,15
+.*:	b2 2b 00 69 [	 ]*sske	%r6,%r9
